--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 actix-web = "4.3"
 leptess = "0.14"
+image = "0.24"
 base64 = "0.21" 
 serde = { version = "1.0", features = ["derive"] }
