--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 actix-web = "4.3"
 leptess = "0.14"
 image = "0.24"
-base64 = "0.21" 
+opencv = { version = "0.86", features = ["clang-runtime"] }
+base64 = "0.21"
 serde = { version = "1.0", features = ["derive"] }
